<resources>
    <string name="app_name">Binancer</string>
    <string name="spot_wallet_title">Spot wallet</string>
    <string name="order_history_title">Orders history</string>
    <string name="title_settings">Settings</string>
    <string name="ticker_title">Ticker</string>
    <string name="trade_history_title">Trade history</string>
    <string name="price">Price</string>
    <string name="amount">Amount</string>
    <string name="filled">Filled</string>
    <string name="fee">Fee</string>
    <string name="total">Total</string>
    <string name="sort_by">Sort by</string>
    <string name="newest_transaction">Newest transaction</string>
    <string name="oldest_transaction">Oldest transaction</string>
    <string name="confirm">confirm</string>
    <string name="key">Key</string>
    <string name="set_api_key_title">Set Binance API key</string>
    <string name="secret">Secret</string>
    <string name="refresh">Refresh</string>
    <string name="hide_dust">Hide dust</string>
    <string name="currency">Currency</string>
    <string name="usdt_sort_by">$ - USDT</string>
    <string name="eur_sort_by">€ - EUR</string>
    <string name="name">Name</string>
    <string name="highest_value">Highest value</string>
    <string name="account_delay">Account(s)</string>
    <string name="ticker_delay">Ticker(s)</string>
    <string name="error_something_went_wrong">Something went wrong |-_-|</string>
</resources>