<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/purple_700"
    android:orientation="vertical"
    android:paddingStart="@dimen/space_16dp"
    android:paddingEnd="@dimen/space_16dp"
    android:paddingBottom="@dimen/space_8dp"
    tools:context=".ui.spotwallet.FilterSpotWalletFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_8dp"
        android:text="@string/currency"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/currency_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/space_16dp"
        android:paddingTop="@dimen/space_8dp">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/usdt_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/space_16dp"
            android:paddingEnd="0dp"
            android:text="@string/usdt_sort_by"
            android:textColor="@color/white"
            android:textSize="@dimen/font_16sp"
            app:buttonTint="@color/white" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/eur_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/space_16dp"
            android:paddingEnd="0dp"
            android:text="@string/eur_sort_by"
            android:textColor="@android:color/white"
            android:textSize="@dimen/font_16sp"
            app:buttonTint="@android:color/white" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_8dp"
        android:text="@string/sort_by"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/sort_by_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/space_16dp"
        android:paddingTop="@dimen/space_8dp">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/highest_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/space_16dp"
            android:paddingTop="@dimen/space_8dp"
            android:paddingEnd="0dp"
            android:text="@string/highest_value"
            android:textColor="@color/white"
            android:textSize="@dimen/font_16sp"
            app:buttonTint="@color/white" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/name_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/space_16dp"
            android:paddingEnd="0dp"
            android:text="@string/name"
            android:textColor="@android:color/white"
            android:textSize="@dimen/font_16sp"
            app:buttonTint="@android:color/white" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_8dp"
        android:text="@string/refresh"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="@dimen/space_16dp"
        android:paddingEnd="0dp">

        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/ticker_delay"
            android:textColor="@color/white"
            android:textSize="@dimen/font_16sp" />

        <com.google.android.material.slider.Slider
            android:id="@+id/ticker_refresh_slider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_16dp"
            android:layout_marginEnd="0dp"
            android:stepSize="1"
            android:valueFrom="5"
            android:valueTo="60"
            app:thumbColor="@color/white"
            app:tickColor="@color/white"
            app:trackColor="@color/white" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>