<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:animateLayoutChanges="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimaryBackground"
    tools:context=".ui.ApiCheckSplashActivity">

    <ImageView
        android:id="@+id/icon_image_view"
        android:layout_width="122dp"
        android:layout_height="122dp"
        android:layout_marginTop="@dimen/space_32dp"
        android:src="@drawable/ic_binancer"
        app:layout_constraintBottom_toTopOf="@id/input_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_32dp"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible">

        <TextView
            android:id="@+id/title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_api_key_title"
            android:textColor="@color/white"
            android:textSize="@dimen/font_24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/info_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_8dp"
            android:text="API key is stored only locally. Use only read only API keys! (TODO: App accepts only read only API keys!)"
            android:textColor="@color/white"
            android:textSize="@dimen/font_16sp"
            app:layout_constraintTop_toBottomOf="@id/title_text_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/api_key_text_field"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_16dp"
            android:hint="@string/key"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/info_text_view">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:lines="2"
                android:maxLines="2" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/api_secret_text_field"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_8dp"
            android:hint="@string/secret"
            app:layout_constraintTop_toBottomOf="@id/api_key_text_field"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:lines="2"
                android:maxLines="2"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/disclaimer_check_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/api_secret_text_field"
            app:layout_constraintStart_toStartOf="parent"  />

        <TextView
            android:id="@+id/disclaimer_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Disclaimer"
            android:visibility="gone"
            android:textColor="@color/white"
            android:textSize="@dimen/font_16sp"
            app:layout_constraintBottom_toBottomOf="@id/disclaimer_check_box"
            app:layout_constraintStart_toEndOf="@id/disclaimer_check_box"
            app:layout_constraintTop_toTopOf="@id/disclaimer_check_box" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/confirm_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_56dp"
            android:textColor="@color/white"
            android:text="@string/confirm"
            android:enabled="false"
            android:layout_marginTop="@dimen/space_32dp"
            android:layout_marginBottom="@dimen/space_16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/disclaimer_check_box" />
    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.constraintlayout.widget.ConstraintLayout>